<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:backgroundTint="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/tvImageView"
            android:layout_width="103.21dp"
            android:layout_height="115dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/photo"
            app:layout_constraintBottom_toTopOf="@+id/IBRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:layout_marginStart="16.87dp"
            android:text="@string/mercedes"
            android:textAppearance="@style/mercedes"
            app:layout_constraintStart_toEndOf="@+id/tvImageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/tvTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="11dp"
            android:gravity="top"
            android:text="@string/feb_2023"
            android:textAppearance="@style/feb_2023"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/tvTextView" />

        <TextView
            android:id="@+id/tvTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:text="@string/pm_to_01_30"
            android:textAppearance="@style/pm_to_01_30"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/tvTextDate"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvTextFounder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:text="@string/founders_ca"
            android:textAppearance="@style/founders_ca"
            app:layout_constraintStart_toEndOf="@+id/tvImageView"
            app:layout_constraintTop_toBottomOf="@+id/tvTextTime"
            tools:ignore="MissingConstraints" />


        <View
            android:id="@+id/view"
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/calendar_1"
            app:layout_constraintEnd_toStartOf="@+id/tvTextDate"
            app:layout_constraintStart_toEndOf="@+id/tvImageView"
            app:layout_constraintTop_toBottomOf="@+id/tvTextView" />

        <View
            android:id="@+id/view2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/baseline_access_time_24"
            app:layout_constraintEnd_toStartOf="@+id/tvTextTime"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvImageView"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageButton
            android:id="@+id/ivForward"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="235dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="101dp"
            android:background="@drawable/forward"
            app:layout_constraintBottom_toTopOf="@+id/IBRegister"
            app:layout_constraintStart_toEndOf="@+id/tvImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/IBRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rectangle_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTextFounder" />

        <TextView
            android:id="@+id/Register_Agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTextFounder" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>